[package]
name = "twitch-remindme"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuid = "1.2.0"
eyre = "0.6.5"
flume = "0.10.9"
pest = "2.1.3"
pest_derive = "2.1.0"
ron = "0.7.0"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
time = { version = "0.3.4", features = ["serde"] }
tokio = { version = "1.13.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
twitch-irc = { version = "3.0.1", features = [
    "transport-tcp",
    "transport-tcp-rustls-webpki-roots",
], default-features = false }
